--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
   "name": "math-parser",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --silent",
-    "start": "webpack-dev-server --open"
-  },
-  "author": "",
-  "license": "ISC",
+  "version": "0.0.1",
+  "description": "Parses math expressions using shunting yard algorithm",
+  "main": "dist/MathExprParser/index.js",
+  "types": "dist/MathExprParser/index.d.ts",
+  "author": "kn1ght",
+  "license": "MIT",
+  "keywords": [
+    "math-parser",
+    "reverse-polish-notation",
+    "shunting-yard-algorithm"
+  ],
+  "repository": "kn1ght/math-parser",
+  "files": [
+    "dist/**/*"
+  ],
   "husky": {
     "hooks": {
       "pre-push": "npm test"
     }
   },
+  "scripts": {
+    "test": "jest --silent",
+    "start": "webpack-dev-server --open",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
+  },
   "devDependencies": {
     "@types/jest": "^25.1.4",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
@@ -31,9 +47,5 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
-  },
-  "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
   }
 }
