--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
     "outDir": "./dist/",
     "noImplicitAny": true,
     "sourceMap": true,
-    "module": "es6",
+    "module": "commonjs",
     "target": "es5",
-    "jsx": "react",
-    "allowJs": true
-  }
+    "allowJs": true,
+    "declaration": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "tests"]
 }
